chore: updated .cirrus.yml

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,6 +8,7 @@ task:
     - echo "Installing brew..."
     - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
     - echo "Installing node and node modules..."
+    - echo 'export PATH="/opt/homebrew/opt/node@14/bin:$PATH"' >> ~/.zshrc
     - brew install node@14
     - npm install
     - echo "Try brew formula..."
