refactor: moved integration to its own proper class and refactored the rest

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -125,6 +125,8 @@
     }
   },
   "dependencies": {
+    "@azure/msal-node": "^1.9.0",
+    "@azure/msal-node-extensions": "1.0.0-alpha.17",
     "@angular/animations": "^13.2.2",
     "@angular/cdk": "^13.2.2",
     "@angular/common": "^13.2.2",
