feat: msal library working on cli and core

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -125,8 +125,6 @@
     }
   },
   "dependencies": {
-    "@azure/msal-node": "^1.9.0",
-    "@azure/msal-node-extensions": "1.0.0-alpha.17",
     "@angular/animations": "^13.2.2",
     "@angular/cdk": "^13.2.2",
     "@angular/common": "^13.2.2",
@@ -137,11 +135,13 @@
     "@angular/platform-browser": "^13.2.2",
     "@angular/platform-browser-dynamic": "^13.2.2",
     "@angular/router": "^13.2.2",
+    "@azure/msal-node": "^1.9.0",
+    "@azure/msal-node-extensions": "^1.0.0-alpha.17",
     "@electron/remote": "^2.0.1",
     "@ng-select/ng-select": "8.1.1",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
-    "@noovolari/leapp-core": "0.1.110",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -172,7 +172,7 @@
     "ini": "~2.0.0",
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
-    "keytar": "7.7.0",
+    "keytar": "^7.8.0",
     "markdown-it": "^12.0.6",
     "menubar": "~9.0.3",
     "mousetrap": "~1.6.5",
