--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,7 +14,7 @@
     "@azure/msal-node": "^1.9.0",
     "@azure/msal-node-extensions": "^1.0.0-alpha.17",
     "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@noovolari/leapp-core": "0.1.110",
+    "@noovolari/leapp-core": "file:../core",
     "@oclif/core": "1.6.0",
     "@oclif/plugin-help": "^5.1.12",
     "@types/inquirer": "^8.2.0",
@@ -41,7 +41,7 @@
     "inquirer": "^8.2.0",
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
-    "keytar": "7.7.0",
+    "keytar": "^7.8.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
     "node-ipc": "9.2.1",
