--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@azure/msal-node": "^1.9.0",
     "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@noovolari/leapp-core": "file:../core",
+    "@noovolari/leapp-core": "^0.1.110",
     "@oclif/core": "1.6.0",
     "@oclif/plugin-help": "^5.1.12",
     "@types/inquirer": "^8.2.0",
@@ -40,7 +40,7 @@
     "inquirer": "^8.2.0",
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
-    "keytar": "^7.8.0",
+    "keytar": "7.9.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
     "node-ipc": "9.2.1",
@@ -60,7 +60,8 @@
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
     "wait-on": "^6.0.0",
-    "zlib": "~1.0.5"
+    "zlib": "~1.0.5",
+    "bindings": "^1.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
@@ -77,7 +78,8 @@
     "puppeteer": "~13.2.0",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "nan": "^2.13.2"
   },
   "dirname": "oex",
   "engines": {
