--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
     "ini": "~2.0.0",
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
-    "keytar": "7.7.0",
+    "keytar": "7.9.0",
     "ms": "^2.1.3",
     "node-ipc": "9.2.1",
     "node-log-rotate": "~0.1.5",
@@ -48,7 +48,8 @@
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
     "wait-on": "^6.0.0",
-    "zlib": "~1.0.5"
+    "zlib": "~1.0.5",
+    "nan": "^2.13.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
@@ -59,7 +60,8 @@
     "@types/jest": "^27.4.1",
     "gushio": "~0.7.0",
     "jest": "^27.4.5",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "node-gyp": "^7.0.0"
   },
   "exports": {
     "./*": "./dist/*.js"
@@ -72,7 +74,9 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src/dpapi-addon",
+    "binding.gyp"
   ],
   "publishConfig": {
     "access": "public"
