chore: cleaned msal cli and desktop app deps

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -89,7 +89,9 @@
     "/bin",
     "/dist",
     "/npm-shrinkwrap.json",
-    "/oclif.manifest.json"
+    "/oclif.manifest.json",
+    "src/dpapi-addon",
+    "binding.gyp"
   ],
   "homepage": "https://github.com/noovolari/leapp",
   "keywords": [
