--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,8 +48,7 @@
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
     "wait-on": "^6.0.0",
-    "zlib": "~1.0.5",
-    "nan": "^2.13.2"
+    "zlib": "~1.0.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
@@ -60,8 +59,7 @@
     "@types/jest": "^27.4.1",
     "gushio": "~0.7.0",
     "jest": "^27.4.5",
-    "typescript": "4.5.5",
-    "node-gyp": "^7.0.0"
+    "typescript": "4.5.5"
   },
   "exports": {
     "./*": "./dist/*.js"
@@ -74,9 +72,7 @@
     }
   },
   "files": [
-    "dist",
-    "src/dpapi-addon",
-    "binding.gyp"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
