--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # compiled output
 packages/desktop-app/dist
+packages/desktop-app/build
 packages/desktop-app/tmp
 packages/desktop-app/out-tsc
 packages/desktop-app/release
@@ -66,6 +67,7 @@ packages/cli/*-debug.log
 packages/cli/*-error.log
 packages/cli/.nyc_output
 packages/cli/dist
+packages/cli/build
 packages/cli/lib
 packages/cli/tmp
 packages/cli/yarn.lock
