--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,6 +23,7 @@
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
     "aws-sdk-mock": "5.3.0",
+    "bindings": "^1.5.0",
     "chdir": "0.0.0",
     "class-transformer": "^0.4.0",
     "compare-versions": "^3.6.0",
@@ -42,7 +43,9 @@
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
     "ms": "^2.1.3",
+    "nan": "^2.13.2",
     "node-fetch": "^2.6.7",
+    "node-gyp-build": "^4.4.0",
     "node-ipc": "9.2.1",
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
@@ -60,8 +63,7 @@
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
     "wait-on": "^6.0.0",
-    "zlib": "~1.0.5",
-    "bindings": "^1.5.0"
+    "zlib": "~1.0.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
@@ -75,11 +77,11 @@
     "globby": "^11",
     "gushio": "~0.7.0",
     "jest": "^27.4.5",
+    "prebuildify": "^5.0.0",
     "puppeteer": "~13.2.0",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "4.5.5",
-    "nan": "^2.13.2"
+    "typescript": "4.5.5"
   },
   "dirname": "oex",
   "engines": {
@@ -131,11 +133,11 @@
     "access": "public"
   },
   "scripts": {
+    "install": "node-gyp-build",
     "prepare docs": "gushio gushio/replace-header-cli-index-doc.js",
     "clean": "gushio gushio/target-clean.js",
     "test": "jest",
     "prepack": "gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
-    "release": "gushio gushio/target-release.js",
     "release-homebrew": "gushio gushio/target-brew-release.js",
     "release-npm": "gushio gushio/target-npm-release.js"
   },
