--- a/packages/desktop-app/electron/tsconfig.json
+++ b/packages/desktop-app/electron/tsconfig.json
@@ -4,13 +4,21 @@
     "baseUrl": "./",
     "declaration": false,
     "experimentalDecorators": true,
-    "lib": ["es2018", "dom"],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
     "sourceMap": true,
     "target": "es5",
-    "typeRoots": ["node_modules/@types"],
-    "types": ["node"]
-  }
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "node"
+    ],
+  },
+  "include": ["**/*.ts"]
 }
