--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -53,7 +53,8 @@
       "electron/dist/*",
       "electron/dist/**/*",
       "node_modules/**/*",
-      "package.json"
+      "package.json",
+      "src/dpapi-addon/**/*"
     ],
     "directories": {
       "output": "release",
@@ -145,6 +146,7 @@
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
     "aws-sdk-mock": "5.3.0",
+    "bindings": "^1.5.0",
     "bootstrap": "~4.6.0",
     "chdir": "0.0.0",
     "class-transformer": "^0.4.0",
@@ -176,6 +178,7 @@
     "menubar": "~9.0.3",
     "mousetrap": "~1.6.5",
     "ms": "^2.1.3",
+    "nan": "^2.13.2",
     "ngx-bootstrap": "^8.0.0",
     "ngx-electron": "^2.2.0",
     "ngx-infinite-scroll": "^10.0.1",
@@ -198,8 +201,7 @@
     "v8-compile-cache": "~2.3.0",
     "wait-on": "^6.0.0",
     "zlib": "~1.0.5",
-    "zone.js": "~0.11.4",
-    "bindings": "^1.5.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.2",
@@ -242,7 +244,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
     "typescript": "4.5.5",
-    "util": "^0.12.4",
-    "nan": "^2.13.2"
+    "util": "^0.12.4"
   }
 }
