--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -53,8 +53,7 @@
       "electron/dist/*",
       "electron/dist/**/*",
       "node_modules/**/*",
-      "package.json",
-      "src/dpapi-addon/**/*"
+      "package.json"
     ],
     "directories": {
       "output": "release",
@@ -141,7 +140,8 @@
     "@ng-select/ng-select": "8.1.1",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
-    "@noovolari/leapp-core": "^0.1.110",
+    "@noovolari/dpapi-addon": "0.1.2",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
