--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "gushio": "~0.7.0",
     "husky": "^7.0.0",
-    "lerna": "^4.0.0",
     "lint-staged": "12.3.5",
     "prettier": "^2.5.1",
     "typescript": "4.5.5"
   },
   "scripts": {
     "setup": "npm install && gushio gushio/setup-package.js core cli desktop-app",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "npm install && gushio gushio/project-bootstrap.js core cli desktop-app",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky install"
