--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -10,7 +10,7 @@
   "main": "electron/dist/electron/main.js",
   "homepage": "https://github.com/Noovolari/leapp",
   "scripts": {
-    "setup": "gushio ../../gushio/setup-package.js desktop-app",
+    "setup": "gushio ../../gushio/clean-and-bootstrap.js desktop-app",
     "clean": "gushio gushio/target-clean.js",
     "postinstall": "electron-builder install-app-deps",
     "postinstall-m1": "electron-builder install-app-deps --arch=arm64 --platform=darwin",
