chore: added ls to desktop app cd test

--- a/.github/workflows/desktop-app-cd-test.yml
+++ b/.github/workflows/desktop-app-cd-test.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Bootstrap
         run: npm run bootstrap
       - name: ls
-        run: ls -R dpapi-addon
+        run: ls -R packages/desktop-app/node_modules/@noovolari/dpapi-addon
