--- a/.github/workflows/desktop-app-cd-test.yml
+++ b/.github/workflows/desktop-app-cd-test.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Prepare GIT
+        shell: bash
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
@@ -27,12 +28,16 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - name: Set pro environment
+        shell: bash
         run: npm run set-pro-environment
       - name: Bootstrap
+        shell: bash
         run: npm run bootstrap
       - name: ls
+        shell: bash
         run: ls -R packages/desktop-app/node_modules/@noovolari/dpapi-addon
       - name: Build Win desktop app
+        shell: bash
         run: |
           cd packages/desktop-app
           WIN_CERTIFICATE=windows_sign_certificate.pfx
@@ -55,6 +60,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
       - name: Release draft to S3
+        shell: bash
         run: |
           cd packages/desktop-app
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
