--- a/.github/workflows/desktop-app-cd-test.yml
+++ b/.github/workflows/desktop-app-cd-test.yml
@@ -52,7 +52,7 @@ jobs:
           rm -Rf ./release/builder-effective-config.yaml
           ls -R release
           rm "./release/Leapp-0.12.2-win.zip"
-          zip "./release/Leapp-0.12.2-win.zip" "./release/Leapp Setup 0.12.2.exe"
+          tar.exe -cvzf "./release/Leapp-0.12.2-win.tar.gz" "./release/Leapp Setup 0.12.2.exe"
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
