chore: updated destkop app cd test

--- a/.github/workflows/desktop-app-cd-test-2.yml
+++ b/.github/workflows/desktop-app-cd-test-2.yml
@@ -32,11 +32,8 @@ jobs:
         shell: bash
         run: npm run set-pro-environment
       - name: compress
-        run: tar.exe -cvzf test.tar.gz dpapi-addon
+        run: powershell Compress-Archive dpapi-addon test.zip
       - name: decompress
-        run: |
-          mkdir test
-          cd test
-          tar.exe -xf ../test.tar.gz
+        run: powershell expand-archive test.zip test
       - name: ls root
         run: ls -R test
