--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -50,13 +50,36 @@ jobs:
         run: |
           echo "Not a Desktop App Release Tag or Invalid one Found - Exiting..."
   build-win:
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        os: [ windows-2022 ]
+        node_version: [ 16 ]
+    runs-on: ${{ matrix.os }}
     needs: [ tag-validation ]
     if: needs.tag-validation.outputs.validator == 1
     steps:
+      - name: Prepare GIT
+        shell: bash
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node_version }}
+
+      - name: Set pro environment
+        shell: bash
+        run: npm run set-pro-environment
+
+      - name: Bootstrap
+        shell: bash
+        run: npm run bootstrap
+
       - name: Build Win desktop app
+        shell: bash
         run: |
           cd packages/desktop-app
           WIN_CERTIFICATE=windows_sign_certificate.pfx
@@ -73,6 +96,24 @@ jobs:
           rm "./release/Leapp-$TAG_VERSION-win.zip"
           zip "./release/Leapp-$TAG_VERSION-win.zip" "./release/Leapp Setup $TAG_VERSION.exe"
 
+      - name: Build Win desktop app
+        shell: bash
+        run: |
+          cd packages/desktop-app
+          WIN_CERTIFICATE=windows_sign_certificate.pfx
+          echo "Recreate the window certificate from the secure environment variable"
+          echo "${{ env.WIN_CERTIFICATE }}" | base64 --decode > $WIN_CERTIFICATE
+          npm install
+          npm run release-win
+          rm -Rf ./release/win-unpacked
+          rm -Rf ./release/.cache
+          rm -Rf ./release/builder-debug.yml
+          rm -Rf ./release/builder-effective-config.yaml
+          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
+          TAG_VERSION=${TAG_VERSION:1}
+          rm "./release/Leapp-$TAG_VERSION-win.zip"
+          powershell "Compress-Archive './release/Leapp Setup $TAG_VERSION.exe' './release/Leapp-$TAG_VERSION-win.zip'"
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -81,6 +122,7 @@ jobs:
           aws-region: eu-west-1
 
       - name: Release draft to S3
+        shell: bash
         run: |
           cd packages/desktop-app
           TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
