test: finished aws model tests

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -81,7 +81,7 @@
     "setup": "gushio ../../gushio/clean-and-bootstrap.js core",
     "clean": "gushio gushio/target-clean.js",
     "build": "gushio gushio/target-build.js",
-    "test": "jest",
+    "test": "jest --coverage",
     "release": "gushio gushio/target-release.js"
   },
   "repository": {
