docs: added new azure integration docs, and removed old session doc for azure. Added msal info

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,9 +29,9 @@ nav:
           - 'Configure AWS IAM User': 'configuring-session/configure-aws-iam-user.md'
           - 'Configure AWS IAM Role Federated': 'configuring-session/configure-aws-iam-role-federated.md'
           - 'Configure AWS IAM Role Chained': 'configuring-session/configure-aws-iam-role-chained.md'
-          - 'Configure Azure Tenant': 'configuring-session/configure-azure-tenant.md'
       - 'Configuring an Integration':
           - 'Configure AWS Single Sign-On integration': 'configuring-integration/configure-aws-single-sign-on-integration.md'
+          - 'Configure Azure integration': 'configuring-integration/configure-azure-integration.md'
       - 'Editing a session': 'edit-session.md'
   - Security:
       - 'Intro': 'security/intro.md'
