--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -142,7 +142,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.113",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -157,14 +157,15 @@
     "date-fns": "^2.26.0",
     "electron-default-menu": "~1.0.2",
     "electron-is-dev": "^2.0.0",
+    "electron-localshortcut": "^3.2.1",
     "electron-log": "~4.3.4",
     "electron-notarize": "~1.0.0",
     "electron-osx-sign": "~0.5.0",
     "electron-reload": "^1.5.0",
     "electron-updater": "^4.3.8",
-    "electron-localshortcut": "^3.2.1",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
+    "folder-hash": "^4.0.2",
     "follow-redirects": "^1.14.7",
     "fs-extra": "~9.1.0",
     "fs-web": "1.0.1",
@@ -189,6 +190,7 @@
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
     "reflect-metadata": "^0.1.13",
+    "require-module": "^0.1.0",
     "rimraf": "~3.0.2",
     "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
