--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,6 +57,8 @@
     "@commitlint/config-conventional": "16.2.1",
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^27.4.1",
+    "aws-cdk": "2.31.0",
+    "aws-cdk-lib": "2.31.0",
     "gushio": "~0.7.0",
     "jest": "^27.4.5",
     "typescript": "4.5.5"
@@ -80,6 +82,7 @@
   "scripts": {
     "setup": "gushio ../../gushio/clean-and-bootstrap.js core",
     "clean": "gushio gushio/target-clean.js",
+    "prebuild": "cd ./src/plugin-system/backend && npm run generate:swagger && npm run generate:routes",
     "build": "gushio gushio/target-build.js",
     "test": "jest --coverage",
     "release": "gushio gushio/target-release.js",
