--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -137,12 +137,12 @@
     "@angular/platform-browser-dynamic": "^13.2.2",
     "@angular/router": "^13.2.2",
     "@azure/msal-node": "^1.9.0",
-    "@electron/remote": "^2.0.1",
+    "@electron/remote": "^0.0.1",
     "@ng-select/ng-select": "8.1.1",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.113",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -157,12 +157,12 @@
     "date-fns": "^2.26.0",
     "electron-default-menu": "~1.0.2",
     "electron-is-dev": "^2.0.0",
+    "electron-localshortcut": "^3.2.1",
     "electron-log": "~4.3.4",
     "electron-notarize": "~1.0.0",
     "electron-osx-sign": "~0.5.0",
     "electron-reload": "^1.5.0",
     "electron-updater": "^4.3.8",
-    "electron-localshortcut": "^3.2.1",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
     "follow-redirects": "^1.14.7",
@@ -176,7 +176,7 @@
     "jwt-decode": "~3.1.2",
     "keytar": "7.9.0",
     "markdown-it": "^12.0.6",
-    "menubar": "~9.0.3",
+    "menubar": "^6.0.8",
     "mousetrap": "~1.6.5",
     "ms": "^2.1.3",
     "nan": "^2.13.2",
@@ -222,12 +222,12 @@
     "@types/node": "^16.9.4",
     "@types/node-ipc": "9.2.0",
     "@types/uuid": "^8.3.0",
-    "dotenv": "^10.0.0",
-    "electron": "^15.5.0",
-    "electron-builder": "^23.0.2",
+    "dotenv": "^16.0.1",
+    "electron": "^19.0.8",
+    "electron-builder": "^23.1.0",
     "electron-builder-squirrel-windows": "22.14.3",
-    "electron-packager": "15.4.0",
-    "electron-rebuild": "3.2.3",
+    "electron-packager": "^15.5.1",
+    "electron-rebuild": "3.2.8",
     "gushio": "~0.7.0",
     "husky": "^7.0.0",
     "jasmine": "^3.7.0",
