--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@noovolari/leapp-core",
+  "name": "@hesketh-racing/leapp-core",
   "version": "0.1.115",
   "author": {
     "name": "Noovolari",
