chore: fixed test cli ci-cd pipeline

--- a/.github/workflows/cli-ci-cd-test.yml
+++ b/.github/workflows/cli-ci-cd-test.yml
@@ -3,7 +3,7 @@ name: Leapp CLI CI/CD test
 on:
   push:
     branches:
-      - 'master'
+      - 'LEAP-635-finalize-release-pipeline-automate-fix'
 
   workflow_dispatch:
 
