fix: proposed solution for #284
Signed-off-by: Sami Oksanen <92857136+c-sami@users.noreply.github.com>

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -120,7 +120,7 @@
       "icon": "src/assets/images/Leapp.ico",
       "legalTrademarks": "beSharp",
       "publisherName": "beSharp",
-      "requestedExecutionLevel": "highestAvailable",
+      "requestedExecutionLevel": "asInvoker",
       "verifyUpdateCodeSignature": false,
       "certificateFile": "windows_sign_certificate.pfx"
     }
