--- a/.github/workflows/core-ci-cd-test.yml
+++ b/.github/workflows/core-ci-cd-test.yml
@@ -8,42 +8,42 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_and_test:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-        node_version: [ 16 ]
-    env:
-      SKIP_INTEGRATION_TESTS: "true"
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Prepare GIT
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node_version }}
-      - name: Bootstrap
-        run: |
-          npm install
-          cd packages/core
-          npm install
-      - name: Build
-        run: |
-          cd packages/core
-          npm run build
-      - name: Test
-        run: |
-          cd packages/core
-          npm test
-      - name: Lint
-        run: |
-          npm run lint
+  #build_and_test:
+  #  strategy:
+  #    matrix:
+  #      os: [ ubuntu-latest, windows-latest, macos-latest ]
+  #      node_version: [ 16 ]
+  #  env:
+  #    SKIP_INTEGRATION_TESTS: "true"
+  #  runs-on: ${{ matrix.os }}
+  #  steps:
+  #    - name: Prepare GIT
+  #      run: |
+  #        git config --global core.autocrlf false
+  #        git config --global core.eol lf
+  #    - uses: actions/checkout@v3
+  #    - uses: actions/setup-node@v3
+  #      with:
+  #        node-version: ${{ matrix.node_version }}
+  #    - name: Bootstrap
+  #      run: |
+  #        npm install
+  #        cd packages/core
+  #        npm install
+  #    - name: Build
+  #      run: |
+  #        cd packages/core
+  #        npm run build
+  #    - name: Test
+  #      run: |
+  #        cd packages/core
+  #        npm test
+  #    - name: Lint
+  #      run: |
+  #        npm run lint
 
   check_for_release:
-    needs: build_and_test
+    #needs: build_and_test
     runs-on: ubuntu-latest
     outputs:
       to-release: ${{ steps.validator.outputs.VALID_TAG }}
@@ -60,6 +60,8 @@ jobs:
           git fetch
           COMMIT_HASH=$(git log --format="%H" -n 1)
           TAG=$(git tag --contains $COMMIT_HASH)
+          echo $TAG
+          echo $COMMIT_HASH
           MATCH=$(echo "$TAG" | grep "^core-v[0-9]\+\.[0-9]\+\.[0-9]\+$" || true)
           if [[ $MATCH != "" ]]; then IS_VALID_TAG=1; else IS_VALID_TAG=0; fi;
           echo "::set-output name=VALID_TAG::$IS_VALID_TAG"
@@ -83,19 +85,23 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Bootstrap
+      - name: relase
         run: |
-          npm install
-          cd packages/core
-          npm install
-      - name: Build
-        run: |
-          cd packages/core
-          npm run build
-      - name: Release npm
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          cd packages/core
-          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
-          npm run release
+          echo "releasing..."
+    #  - name: Bootstrap
+    #    run: |
+    #      npm install
+    #      cd packages/core
+    #      npm install
+    #  - name: Build
+    #    run: |
+    #      cd packages/core
+    #      npm run build
+    #  - name: Release npm
+    #    env:
+    #      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    #    run: |
+    #      cd packages/core
+    #      echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
+    #      npm run release
+#
