--- a/.github/workflows/cli-ci-cd-test.yml
+++ b/.github/workflows/cli-ci-cd-test.yml
@@ -22,6 +22,8 @@ jobs:
           git config --global core.autocrlf false
           git config --global core.eol lf
       - uses: actions/checkout@v3
+        with:
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
@@ -50,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          ref: master
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
 
       - name: Check Tag Validity
         id: validator
@@ -78,6 +80,8 @@ jobs:
     if: needs.check_for_release.outputs.to-release == 1
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
       - uses: actions/setup-node@v3
         with:
           node-version: 16
