--- a/.github/workflows/core-ci-cd-test.yml
+++ b/.github/workflows/core-ci-cd-test.yml
@@ -8,42 +8,44 @@ on:
   workflow_dispatch:
 
 jobs:
-  #build_and_test:
-  #  strategy:
-  #    matrix:
-  #      os: [ ubuntu-latest, windows-latest, macos-latest ]
-  #      node_version: [ 16 ]
-  #  env:
-  #    SKIP_INTEGRATION_TESTS: "true"
-  #  runs-on: ${{ matrix.os }}
-  #  steps:
-  #    - name: Prepare GIT
-  #      run: |
-  #        git config --global core.autocrlf false
-  #        git config --global core.eol lf
-  #    - uses: actions/checkout@v3
-  #    - uses: actions/setup-node@v3
-  #      with:
-  #        node-version: ${{ matrix.node_version }}
-  #    - name: Bootstrap
-  #      run: |
-  #        npm install
-  #        cd packages/core
-  #        npm install
-  #    - name: Build
-  #      run: |
-  #        cd packages/core
-  #        npm run build
-  #    - name: Test
-  #      run: |
-  #        cd packages/core
-  #        npm test
-  #    - name: Lint
-  #      run: |
-  #        npm run lint
+  build_and_test:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        node_version: [ 16 ]
+    env:
+      SKIP_INTEGRATION_TESTS: "true"
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Prepare GIT
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+      - uses: actions/checkout@v3
+        with:
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node_version }}
+      - name: Bootstrap
+        run: |
+          npm install
+          cd packages/core
+          npm install
+      - name: Build
+        run: |
+          cd packages/core
+          npm run build
+      - name: Test
+        run: |
+          cd packages/core
+          npm test
+      - name: Lint
+        run: |
+          npm run lint
 
   check_for_release:
-    #needs: build_and_test
+    needs: build_and_test
     runs-on: ubuntu-latest
     outputs:
       to-release: ${{ steps.validator.outputs.VALID_TAG }}
@@ -52,7 +54,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          ref: master
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
 
       - name: Check Tag Validity
         id: validator
