--- a/.github/workflows/core-ci-cd-test.yml
+++ b/.github/workflows/core-ci-cd-test.yml
@@ -45,7 +45,7 @@ jobs:
           npm run lint
 
   check_for_release:
-   # needs: build_and_test
+    needs: build_and_test
     runs-on: ubuntu-latest
     outputs:
       to-release: ${{ steps.validator.outputs.VALID_TAG }}
