--- a/.github/workflows/desktop-app-cd-test.yml
+++ b/.github/workflows/desktop-app-cd-test.yml
@@ -3,40 +3,79 @@ name: Leapp Desktop App CD test
 on:
   push:
     branches:
-      - azure-msal-spike
+      - 'LEAP-635-finalize-release-pipeline-automate-fix'
 
 env:
-  S3_BUCKET: s3://noovolari-leapp-website-distribution-test
+  CERTIFICATE_APPLICATION_OSX_P12: ${{ secrets.CERTIFICATE_APPLICATION_OSX_P12 }}
+  CERTIFICATE_OSX_P12: ${{ secrets.CERTIFICATE_OSX_P12 }}
+  DECODE_PASSWORD: ${{ secrets.DECODE_PASSWORD }}
+  KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
   WIN_CERTIFICATE: ${{ secrets.WIN_CERTIFICATE }}
   WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
-  build:
+  tag-validation:
+    outputs:
+      validator: ${{ steps.validator.outputs.VALID_TAG }}
+      tag-version: ${{ steps.validator.outputs.TAG_VERSION }}
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
+
+      - name: Check Tag Validity
+        id: validator
+        run: |
+          git fetch
+          LOG=$(git log --format="%H" -n 1)
+          TAG=$(git tag --contains $LOG)
+          REGEX="^v[0-9]+\.[0-9]+.[0-9]+"
+          if [[ $TAG =~ $REGEX ]]; then IS_VALID_TAG=1; else IS_VALID_TAG=0; fi;
+          echo "::set-output name=VALID_TAG::$IS_VALID_TAG"
+          echo "::set-output name=TAG_VERSION::$TAG"
+
+      - name: If valid tag set
+        if: steps.validator.outputs.VALID_TAG == 1
+        run: |
+          echo "Valid Tag Found - Building Desktop App..."
+
+      - name: If not valid tag set
+        if: steps.validator.outputs.VALID_TAG != 1
+        run: |
+          echo "Not a Desktop App Release Tag or Invalid one Found - Exiting..."
+  build-win:
     strategy:
       matrix:
         os: [ windows-2022 ]
         node_version: [ 16 ]
     runs-on: ${{ matrix.os }}
+    needs: [ tag-validation ]
+    if: needs.tag-validation.outputs.validator == 1
     steps:
       - name: Prepare GIT
         shell: bash
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
+
       - uses: actions/checkout@v3
+        with:
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
+
       - name: Set pro environment
         shell: bash
         run: npm run set-pro-environment
+
       - name: Bootstrap
         shell: bash
         run: npm run bootstrap
-      - name: ls
-        shell: bash
-        run: ls -R packages/desktop-app/node_modules/@noovolari/dpapi-addon
+
       - name: Build Win desktop app
         shell: bash
         run: |
@@ -50,19 +89,127 @@ jobs:
           rm -Rf ./release/.cache
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
-          ls -R release
-          rm "./release/Leapp-0.12.2-win.zip"
-          powershell "Compress-Archive './release/Leapp Setup 0.12.2.exe' './release/Leapp-0.12.2-win.zip'"
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
+          TAG_VERSION=${TAG_VERSION:1}
+          rm "./release/Leapp-$TAG_VERSION-win.zip"
+          powershell "Compress-Archive './release/Leapp Setup $TAG_VERSION.exe' './release/Leapp-$TAG_VERSION-win.zip'"
+
+  build-linux:
+    runs-on: ubuntu-latest
+    needs: [ tag-validation ]
+    if: needs.tag-validation.outputs.validator == 1
+    steps:
+      - uses: actions/checkout@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-      - name: Release draft to S3
-        shell: bash
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
+
+      - name: Build Linux desktop app
         run: |
           cd packages/desktop-app
-          TAG_VERSION=v123.123.123
+          npm install
+          npm run release-linux
+          rm -Rf ./release/linux-unpacked
+          rm -Rf ./release/.cache
+          rm -Rf ./release/builder-debug.yml
+          rm -Rf ./release/builder-effective-config.yaml
+
+  build-macos-x64:
+    runs-on: macos-latest
+    needs: [ tag-validation ]
+    if: needs.tag-validation.outputs.validator == 1
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
+
+      - name: Build macOS desktop app
+        env:
+          APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
+        run: |
+          cd packages/desktop-app
+          KEY_CHAIN=build.keychain
+          CERTIFICATE_P12=certificate.p12
+          CERTIFICATE_APPLICATION_P12=certificate-application.p12
+          echo "Recreate the certificate from the secure environment variable"
+          echo "security create-keychain"
+          echo "${{ env.CERTIFICATE_OSX_P12 }}" | base64 --decode > $CERTIFICATE_P12
+          echo "${{ env.CERTIFICATE_APPLICATION_OSX_P12 }}" | base64 --decode > $CERTIFICATE_APPLICATION_P12
+          security create-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+          echo "security list-keychains"
+          security list-keychains -s login.keychain build.keychain
+          echo "security default-keychain"
+          security default-keychain -s $KEY_CHAIN
+          echo "security unlock-keychain"
+          security unlock-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+          echo "security import"
+          security import $CERTIFICATE_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
+          security import $CERTIFICATE_APPLICATION_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
+          echo "security find-identity"
+          security find-identity -v
+          echo "security set-key-partition-list"
+          security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+          rm -fr *.p12
+          npm install
+          npm run set-target-x64
+          npm run release-mac
+          rm -Rf ./release/mac
+          rm -Rf ./release/mac-unpacked
+          rm -Rf ./release/.cache
+          rm -Rf ./release/builder-debug.yml
+          rm -Rf ./release/builder-effective-config.yaml
+          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
           TAG_VERSION=${TAG_VERSION:1}
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/$TAG_VERSION/" --recursive
+          rm "./release/Leapp-$TAG_VERSION-mac.zip"
+          rm "./release/Leapp-$TAG_VERSION-mac.zip.blockmap"
+          zip "./release/Leapp-$TAG_VERSION-mac.zip" "./release/Leapp-$TAG_VERSION.dmg"
+
+  build-macos-arm:
+    runs-on: macos-latest
+    needs: [ tag-validation, build-macos-x64 ]
+    if: needs.tag-validation.outputs.validator == 1
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
+
+      - name: Build macOS desktop app
+        env:
+          APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
+        run: |
+          cd packages/desktop-app
+          KEY_CHAIN=build.keychain
+          CERTIFICATE_P12=certificate.p12
+          CERTIFICATE_APPLICATION_P12=certificate-application.p12
+          echo "Recreate the certificate from the secure environment variable"
+          echo "security create-keychain"
+          echo "${{ env.CERTIFICATE_OSX_P12 }}" | base64 --decode > $CERTIFICATE_P12
+          echo "${{ env.CERTIFICATE_APPLICATION_OSX_P12 }}" | base64 --decode > $CERTIFICATE_APPLICATION_P12
+          security create-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+          echo "security list-keychains"
+          security list-keychains -s login.keychain build.keychain
+          echo "security default-keychain"
+          security default-keychain -s $KEY_CHAIN
+          echo "security unlock-keychain"
+          security unlock-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+          echo "security import"
+          security import $CERTIFICATE_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
+          security import $CERTIFICATE_APPLICATION_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
+          echo "security find-identity"
+          security find-identity -v
+          echo "security set-key-partition-list"
+          security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+          rm -fr *.p12
+          npm install
+          npm run set-target-arm64
+          npm run release-mac
+          rm -Rf ./release/mac
+          rm -Rf ./release/mac-unpacked
+          rm -Rf ./release/.cache
+          rm -Rf ./release/builder-debug.yml
+          rm -Rf ./release/builder-effective-config.yaml
+          rm -Rf ./release/mac-arm64
+          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
+          TAG_VERSION=${TAG_VERSION:1}
+          rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip"
+          rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip.blockmap"
+          zip "./release/Leapp-$TAG_VERSION-mac-arm64.zip" "./release/Leapp-$TAG_VERSION-arm64.dmg"
