--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Leapp",
-  "version": "0.13.1",
+  "version": "0.15.0",
   "private": true,
   "author": {
     "name": "Noovolari",
@@ -142,7 +142,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@hesketh-racing/leapp-core": "file:../core",
+    "@hesketh-racing/leapp-core": "0.1.123",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
